Fix right-arrow not showing on active sidebar menu item

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -162,7 +162,6 @@
 }
 .as-nav-list .active .icon-chevron-right,
 .as-nav-list .active a:hover .icon-chevron-right {
-  background-image: url(../img/glyphicons-halflings-white.png);
   opacity: 1;
 }
 .as-nav-list.affix {
